--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@bbabystyle/next-video-player",
-  "version": "2023.1.0",
+  "version": "2023.2.8",
   "description": "",
   "main": "./dist/esm/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Pnlvfx/bbabystyle-react-video-player.git"
+    "url": "git+https://github.com/Pnlvfx/next-video-player.git"
   },
   "peerDependencies": {
     "react": ">=18"
@@ -25,32 +25,38 @@
     "prepublishOnly": "npm test && npm run prettier && npm run lint",
     "clean": "rimraf dist/",
     "build": "yarn clean && yarn build:esm",
-    "build:esm": "tsc"
+    "build:esm": "tsc",
+    "postbuild": "cp -r src/components/css dist/esm/components/css"
   },
-  "keywords": [],
+  "keywords": [
+    "React",
+    "Video player",
+    "nextjs",
+    "video-player",
+    "video"
+  ],
   "author": "Simone Gauli",
   "license": "MIT",
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.5",
-    "@types/react": "^18.0.26",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "copyfiles": "^2.4.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.27",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.3.1",
+    "jest": "^29.4.2",
     "jest-canvas-mock": "^2.4.0",
-    "jest-environment-jsdom": "^29.3.1",
-    "next": "^13.1.1",
-    "prettier": "^2.8.1",
+    "jest-environment-jsdom": "^29.4.2",
+    "next": "^13.1.6",
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "rimraf": "^4.1.2",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   }
 }
